# ndgms

./: .gitignore  .pre-commit-config.yaml  MICROSERVICES_ARCHITECTURE_PLAN.md  PHASE1_TESTING.md  README.md  docker-compose.kafka.yml  docker-compose.lightweight.yml  docker-compose.phase1.yml  test_service_standalone.py
docs/: missing-points.md  (+1 more)
earthquake-monitor/: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  QUICK_START.md  README.md  alembic.ini  alembic_test.ini  pyproject.toml  requirements.txt  test_api_endpoints.py  test_comprehensive_api.py  test_specific_endpoints.py  test_websocket_integration.py
earthquake-monitor/alembic/: env.py
earthquake-monitor/alembic/versions/: 001_initial_tables.py  002_add_postgis_geometry.py
earthquake-monitor/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  startup.sh  test-data.sh
earthquake-monitor/scripts/ingestion/: usgs_ingestion.py
earthquake-monitor/scripts/setup/: init_db.py
earthquake-monitor/src/application/: exceptions.py
earthquake-monitor/src/application/dto/: create_earthquake_request.py  earthquake_dto.py
earthquake-monitor/src/application/events/: event_handlers.py  event_publisher.py
earthquake-monitor/src/application/interfaces/: __init__.py  job_scheduler.py
earthquake-monitor/src/application/services/: __init__.py  earthquake_event_orchestrator.py  error_handler_service.py  scheduled_job_service.py  websocket_filter_service.py
earthquake-monitor/src/application/use_cases/: create_earthquake.py  get_earthquake_details.py  get_earthquakes.py  ingest_earthquake_data.py
earthquake-monitor/src/domain/: exceptions.py
earthquake-monitor/src/domain/entities/: earthquake.py  location.py  magnitude.py
earthquake-monitor/src/domain/events/: earthquake_detected.py  high_magnitude_alert.py
earthquake-monitor/src/domain/repositories/: earthquake_query.py  earthquake_reader.py  earthquake_repository.py  earthquake_search.py  earthquake_writer.py
earthquake-monitor/src/domain/services/: earthquake_factory_service.py  earthquake_validation_service.py  population_config.py  population_service.py  population_service_impl.py  population_service_interface.py
earthquake-monitor/src/infrastructure/: dependencies.py  di_container.py  exceptions.py  factory.py
earthquake-monitor/src/infrastructure/database/: config.py  init.py  models.py
earthquake-monitor/src/infrastructure/repositories/: postgresql_earthquake_repository.py
earthquake-monitor/src/infrastructure/scheduler/: __init__.py  scheduler_service.py
earthquake-monitor/src/presentation/: dependencies.py  exceptions.py  main.py  schemas.py
earthquake-monitor/src/presentation/auth/: __init__.py  config.py  dependencies.py  models.py  repository.py  router.py  security.py
earthquake-monitor/src/presentation/routers/: earthquakes.py  ingestion.py  websocket.py
earthquake-monitor/tests/: conftest.py
earthquake-monitor/tests/integration/: __init__.py  conftest.py  test_api_schema_validation.py  test_api_security.py  test_auth_api.py  test_database_setup.py  test_earthquake_api.py  test_earthquake_api_with_db.py  test_scheduler_integration.py  test_websocket_database_integration.py
earthquake-monitor/tests/unit/: conftest.py
(+23 files in other folders)
