[tool.poetry]
name = "earthquake-monitor"
version = "0.1.0"
description = "Earthquake monitoring system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.117.1"
uvicorn = "0.36.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "2.9.10"
alembic = "1.16.5"
pydantic = "2.11.9"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
python-multipart = "0.0.20"
bcrypt = "4.3.0"
httpx = "0.28.1"
python-dotenv = "1.1.1"
asyncpg = "0.30.0"
geoalchemy2 = "0.18.0"
authx = "1.4.3"
email-validator = "2.3.0"
apscheduler = "3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-cov = "7.0.0"
black = "25.9.0"
ruff = "0.13.1"
mypy = "1.7.1"
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]  # Allow "useless" expressions in tests
